syntax = "proto3";

package pb;

option go_package = "internal/infrastructure/delivery/grpc/pb/";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){};
  rpc Authentication(CreateUserRequest) returns (TokenResponse) {};
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
  int32 status = 2;
  string message = 3;
}

message TokenResponse {
  string token = 1;
  string message = 2;
}